
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 scalar_t__ iscntrl (int) ;
 int printf (char*,int) ;
 int putc (int,int *) ;

__attribute__((used)) static void putstr(char *str, FILE *out)
{
 int c;
 for (c = *str++; c; c = *str++) {
  if (iscntrl(c)) {
   putc('\\', out);
   switch(c) {
   case '\n': putc('n', out); break;
   case '\r': putc('r', out); break;
   default: printf("%03o", c); break;
   }
  } else {
   putc(c, out);
  }
 }
}
