; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_33193.c_putstr.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_33193.c_putstr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"%03o\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @putstr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @putstr(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = getelementptr inbounds i8, i8* %6, i32 1
  store i8* %7, i8** %3, align 8
  %8 = load i8, i8* %6, align 1
  %9 = sext i8 %8 to i32
  store i32 %9, i32* %5, align 4
  br label %10

10:                                               ; preds = %36, %2
  %11 = load i32, i32* %5, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %41

13:                                               ; preds = %10
  %14 = load i32, i32* %5, align 4
  %15 = call i64 @iscntrl(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %31

17:                                               ; preds = %13
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @putc(i32 92, i32* %18)
  %20 = load i32, i32* %5, align 4
  switch i32 %20, label %27 [
    i32 10, label %21
    i32 13, label %24
  ]

21:                                               ; preds = %17
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @putc(i32 110, i32* %22)
  br label %30

24:                                               ; preds = %17
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @putc(i32 114, i32* %25)
  br label %30

27:                                               ; preds = %17
  %28 = load i32, i32* %5, align 4
  %29 = call i32 @printf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %28)
  br label %30

30:                                               ; preds = %27, %24, %21
  br label %35

31:                                               ; preds = %13
  %32 = load i32, i32* %5, align 4
  %33 = load i32*, i32** %4, align 8
  %34 = call i32 @putc(i32 %32, i32* %33)
  br label %35

35:                                               ; preds = %31, %30
  br label %36

36:                                               ; preds = %35
  %37 = load i8*, i8** %3, align 8
  %38 = getelementptr inbounds i8, i8* %37, i32 1
  store i8* %38, i8** %3, align 8
  %39 = load i8, i8* %37, align 1
  %40 = sext i8 %39 to i32
  store i32 %40, i32* %5, align 4
  br label %10

41:                                               ; preds = %10
  ret void
}

declare dso_local i64 @iscntrl(i32) #1

declare dso_local i32 @putc(i32, i32*) #1

declare dso_local i32 @printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
